--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/carrito.css">
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
@@ -91,11 +92,29 @@
                   <a class="nav-link" href="pages/contact.html">Contacto</a>
                 </li>
               </ul>
-              <header class="carrito-menu">
-                <button id="cesta-carrito"><i class="fas fa-shopping-cart"></i><span id="contador-carrito">0</span></button>
-              </header>
-            </div>
+              <div class="cart-btn">
+                <span class="nav-icon">
+                    <i class="fa fa-cart-plus">0</i>
+                    <div class="cart-items">0</div>
+                </span>
+            </nav>
           </div>
+          </div>
+         
+          <!-- <div class="cart-overlay">
+              <div class="cart">
+                  <span class="close-cart">
+                      <i class="fas fa-window-close"></i>
+                  </span>
+                  <h2>Bienvenido, este es tu carrito de compras</h2>
+                  <div class="cart-content"></div>
+                  <div class="cart-footer">
+                      <h3>TOTAL: $ <span class="cart-total">0</span></h3>
+                      <button class="clear-cart banner-btn">Comprar</button>
+                  </div>
+              </div>
+            </div>
+          </div> -->
 
         </nav>
       </div>
