Actualización de páginas y links

--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -30,13 +30,13 @@
               </div>
               <div class="social-container">
                 <a href="https://www.facebook.com/BayerConoSur">
-                  <img src="images/fb.png" alt="" class="s-1">
+                  <img src="../images/fb.png" alt="" class="s-1">
                 </a>
                 <a href="https://twitter.com/BayerConoSur">
-                  <img src="images/twitter.png" alt="" class="s-2">
+                  <img src="../images/twitter.png" alt="" class="s-2">
                 </a>
                 <a href="https://www.instagram.com/bayerconosur/?hl=es">
-                  <img src="images/instagram.png" alt="" class="s-3">
+                  <img src="../images/instagram.png" alt="" class="s-3">
                 </a>
               </div>
             </div>
@@ -44,7 +44,7 @@
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
               <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
                 <span>
                   MedPriv
                 </span>
@@ -58,20 +58,20 @@
                 <div class="d-flex  flex-column flex-lg-row align-items-center w-100 justify-content-between">
                   <ul class="navbar-nav  ">
                     <li class="nav-item active">
-                      <a class="nav-link" href="../index.html">Inicio <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html"> Sobre Nosotros </a>
+                      <a class="nav-link" href="../pages/about.html"> Sobre Nosotros </a>
                     </li>
                  
                     <li class="nav-item">
-                      <a class="nav-link" href="comprar.html"> Compra Online </a>
+                      <a class="nav-link" href="../pages/comprar.html"> Compra Online </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="news.html"> Noticias </a>
+                      <a class="nav-link" href="../pages/news.html"> Noticias </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contacto</a>
+                      <a class="nav-link" href="../pages/contact.html">Contacto</a>
                     </li>
                   </ul>
                 </div>
@@ -107,6 +107,81 @@
                     </div>
                 </div>
             </div>
+
+            <!-- info section -->
+  <section class="info_section layout_padding2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="info_contact">
+            <h4>
+              Contact
+            </h4>
+            <div class="box">
+              <div class="img-box">
+                <img src="images/telephone-symbol-button.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  +54 123567890
+                </h6>
+              </div>
+            </div>
+            <div class="box">
+              <div class="img-box">
+                <img src="images/email.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  demo@gmail
+                </h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="info_menu">
+            <h4>
+              Menu
+            </h4>
+            <ul class="navbar-nav  ">
+              <li class="nav-item active">
+                <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/about.html"> Sobre nosotros </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="medicine.html"> Medicina </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/comprar.html"> Compra online </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="info_news">
+            <h4>
+              newsletter
+            </h4>
+            <form action="">
+              <input type="text" placeholder="Enter Your email">
+              <div class="d-flex justify-content-center justify-content-md-end mt-3">
+                <button>
+                  Subscribe
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- end info section -->
+
 
   <!-- footer section -->
   <section class="container-fluid footer_section">
