--- a/index.html
+++ b/index.html
@@ -101,21 +101,6 @@
           </div>
           </div>
          
-          <!-- <div class="cart-overlay">
-              <div class="cart">
-                  <span class="close-cart">
-                      <i class="fas fa-window-close"></i>
-                  </span>
-                  <h2>Bienvenido, este es tu carrito de compras</h2>
-                  <div class="cart-content"></div>
-                  <div class="cart-footer">
-                      <h3>TOTAL: $ <span class="cart-total">0</span></h3>
-                      <button class="clear-cart banner-btn">Comprar</button>
-                  </div>
-              </div>
-            </div>
-          </div> -->
-
         </nav>
       </div>
     </header>
@@ -150,7 +135,7 @@
                    Tenemos muchas variedades de medicamentos para satisfacer sus necesidades. Tan solo busque lo que desea que contamos con un amplio catalogo.
                     </p>
                     <div>
-                      <a href="pages/buy.html">
+                      <a href="./pages/comprar.html">
                         Buy Now
                       </a>
                     </div>
@@ -181,7 +166,7 @@
 
                     </p>
                     <div>
-                      <a href="">
+                      <a href="./pages/comprar.html">
                         Buy Now
                       </a>
                     </div>
@@ -213,7 +198,7 @@
                       believable.
                     </p>
                     <div>
-                      <a href="">
+                      <a href="./pages/comprar.html">
                         Buy Now
                       </a>
                     </div>
@@ -452,10 +437,10 @@
 
             </h2>
             <p>
-              It is a long established fact that a reader will be distracted by
+              Escribiendonos por mail y presentando la factura de tu anterior compra
             </p>
             <div>
-              <a href="pages/buy.html">
+              <a href="../pages/comprar.html">
                 Buy Now
               </a>
             </div>
@@ -493,15 +478,15 @@
       </div>
       <div class="detail-box">
         <p>
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking
-          at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-          opposed to using 'Content here, content here', making it
+          ¡Bienvenidos a nuestra empresa de píldoras medicinales! Somos una organización dedicada a mejorar la calidad de vida de las personas a través de medicamentos de alta calidad y efectividad.
+
+          En nuestra empresa, nos enfocamos en el desarrollo de píldoras medicinales innovadoras que aborden una amplia gama de problemas de salud, desde enfermedades crónicas hasta dolores menores y síntomas cotidianos. Trabajamos con los mejores profesionales de la salud para asegurarnos de que nuestros medicamentos sean seguros, efectivos y estén aprobados por los organismos reguladores correspondientes.
         </p>
-        <div class="d-flex justify-content-center">
+        <!-- <div class="d-flex justify-content-center">
           <a href="">
             Read More
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -540,9 +525,8 @@
               </div>
               <div class="client_detail">
                 <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable.
+                  "Mi hijo tiene asma desde que era pequeño y ha estado tomando píldoras para controlar sus síntomas durante años. 
+                  Gracias a las píldoras, ha podido llevar una vida normal y participar en actividades deportivas sin problemas."
                 </p>
               </div>
               <div class="client_box ">
@@ -563,9 +547,8 @@
               </div>
               <div class="client_detail">
                 <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable.
+                  "Hace unos meses empecé a tomar una píldora para la ansiedad y la verdad es que ha sido un cambio impresionante en mi vida. 
+                  Antes estaba constantemente preocupado y nervioso, pero ahora me siento mucho más tranquilo y capaz de manejar el estrés diario."
                 </p>
               </div>
               <div class="client_box ">
@@ -586,9 +569,8 @@
               </div>
               <div class="client_detail">
                 <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable.
+                  "Después de sufrir un ataque al corazón, mi médico me recetó una serie de píldoras para controlar mi presión arterial y prevenir futuros ataques. 
+                  Desde entonces, he estado tomando las píldoras regularmente y me siento mucho mejor y más seguro de mi salud."
                 </p>
               </div>
             </div>
@@ -610,7 +592,7 @@
       <div class="row">
         <div class="custom_heading-container ">
           <h2>
-            Request A call back
+            Contactese con nosotros
           </h2>
         </div>
       </div>
@@ -636,9 +618,12 @@
               <div class="form-group ">
                 <label for="inputState">Select medicine</label>
                 <select id="inputState" class="form-control">
-                  <option selected>Medicine 1</option>
-                  <option selected>Medicine 2</option>
-                  <option selected>Medicine 3</option>
+                  <option selected>THC pildoras</option>
+                  <option selected>BlueCap</option>
+                  <option selected>GreenCap</option>
+                  <option selected>PinkCap</option>
+                  <option selected>OrangeBlueCap</option>
+                  <option selected>Bayaspirina</option>
                 </select>
               </div>
               <div class="form-group">
@@ -655,8 +640,8 @@
               Get Now Medicines
             </h3>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable.
+              Hay muchas variedades de medicamentos disponibles para uso médico exclusivamente.
+              Consulte nuestro catalogo y contactese con nosotros para adquirir su producto.
             </p>
           </div>
         </div>
@@ -704,14 +689,14 @@
             </h4>
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> Sobre Nosotros </a>
+                <a class="nav-link" href="./pages/about.html"> Sobre Nosotros </a>
               </li>
             
               <li class="nav-item">
-                <a class="nav-link" href="buy.html"> Sompra online </a>
+                <a class="nav-link" href="./pages/comprar.html"> Compra online </a>
               </li>
             </ul>
           </div>
