Actualización carrito y pages

--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/bootstrap.css">
+     <!-- CDN sweetalert -->
+     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- responsive style -->
     <link href="../css/responsive.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/carrito.css">
@@ -25,7 +27,7 @@
             <div class="top_contact-container">
               <div class="tel_container">
                 <a href="">
-                  <img src="images/telephone-symbol-button.png" alt=""> Call : +54 1234567890
+                  <img src="../images/telephone-symbol-button.png" alt=""> Call : +54 1234567890
                 </a>
               </div>
               <div class="social-container">
