--- a/pages/news.html
+++ b/pages/news.html
@@ -31,6 +31,8 @@
   <!-- Custom styles for this template -->
   <link href="../css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/carrito.css">
+   <!-- CDN sweetalert -->
+   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- responsive style -->
   <link href="../css/responsive.css" rel="stylesheet" />
 </head>
@@ -43,7 +45,7 @@
         <div class="top_contact-container">
           <div class="tel_container">
             <a href="">
-              <img src="images/telephone-symbol-button.png" alt=""> Call : +54 1234567890
+              <img src="../images/telephone-symbol-button.png" alt=""> Call : +54 1234567890
             </a>
           </div>
           <div class="social-container">
