Actualización reloj, js y css

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                   <a class="nav-link" href="pages/contact.html">Contacto</a>
                 </li>
               </ul>
+              <section>
+                <div class="reloj">
+                  <span id="tiempo">00 : 00 : 00</span>
+                </div>
+              </section>
               <div class="cart-btn">
                 <span class="nav-icon">
                     <i class="fa fa-cart-plus">0</i>
@@ -729,16 +734,18 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2023 All Rights Reserved.
-      <a href="https://html.design/"></a>
+    
     </p>
   </section>
   <!-- footer section -->
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+ 
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js">
   </script>
+  <script src="./js/reloj.js"></script>
   <script type="text/javascript">
+  
     $(".owl-carousel").owlCarousel({
       loop: true,
       margin: 10,
